--- a/css/theme.css
+++ b/css/theme.css
@@ -657,11 +657,11 @@ ul.tweets li {
     padding: 19px 0;
     margin: 0 0 20px 0;
     list-style: none;
-    background:#d1d1d1;
-    color:goldenrod;
+    background:#ceb149;
+    color:floralwhite;
     font-family: 'Open Sans', sans-serif;
     font-weight:400;
-    font-size:19px;
+    font-size:17px;
 }
 .breadcrumb span {
     color:#1e1e1e;
@@ -671,7 +671,7 @@ ul.tweets li {
     color:#1e1e1e;
     font-family: 'Open Sans', sans-serif;
     font-weight:400;
-    font-size:19px;
+    font-size:17px;
 }
 .profile {text-align:center;
 }
