--- a/css/style.css
+++ b/css/style.css
@@ -1724,6 +1724,7 @@ input[type="text"] {
     height: 200px; } }
 
 #colorlib-offcanvas {
+  font-size: 17px;
   position: absolute;
   z-index: 1901;
   width: 270px;
